Fix issue #161, horizontal scrollbars obscures content in CSS examples

--- a/css/editable-css.css
+++ b/css/editable-css.css
@@ -21,7 +21,6 @@ header h4 {
     background-color: #fff;
     border: 1px solid #eaf2f4;
     width: 100%;
-    max-height: 550px;
     overflow: hidden;
 }
 
@@ -51,7 +50,7 @@ header h4 {
 .example-choice-list.live,
 .example-choice-list.large.live {
     float: left;
-    width: 55%;
+    width: 60%;
     text-align: right;
 }
 
@@ -64,7 +63,7 @@ header h4 {
     position: relative;
     float: right;
     background-color: #fff;
-    width: 45%;
+    width: 40%;
     overflow: hidden;
     box-shadow: 2px 2px 5px -2px rgba(0, 0, 0, .2);
     padding: 1em;
@@ -182,10 +181,6 @@ Column display
 - kuma flips display at tablet size, with padding that's approx 738px
 */
 @media screen and (max-width: 738px) {
-    .editor-wrapper {
-        max-height: 600px;
-    }
-
     .example-choice-list,
     .example-choice-list.live,
     .example-choice-list.large.live,
