--- a/css/editor-libs/prism-override.css
+++ b/css/editor-libs/prism-override.css
@@ -19,6 +19,7 @@ pre[class*='language-'] {
 }
 
 code[class*='language-'] {
+    padding: 1em;
     height: auto;
     max-height: 220px;
     overflow: scroll;
